--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <base target="_blank">
-  <title>Popup</title>
-</head>
-<body style="min-width: 100px">
-  <div id="app"></div>
-  <script type="module" src="./main.ts"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <base target="_blank" />
+    <title>Popup</title>
+  </head>
+  <body style="min-width: 100px">
+    <div id="root"></div>
+    <script type="module" src="./main.tsx"></script>
+  </body>
 </html>
