--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -7,6 +7,7 @@
   </head>
   <body style="min-width: 100px">
     <div id="root"></div>
+    <script type="module" src="./polyfill.ts"></script>
     <script type="module" src="./main.tsx"></script>
   </body>
 </html>
