--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -5,7 +5,8 @@
     <base target="_blank" />
     <title>Popup</title>
   </head>
-  <body style="min-width: 300px">
+  <body>
+    <noscript>You need to enable Javascript to run this application.</noscript>
     <div id="root"></div>
     <script type="module" src="./polyfill.ts"></script>
     <script type="module" src="./main.tsx"></script>
