--- a/src/options/index.html
+++ b/src/options/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./polyfill.ts"></script>
     <script type="module" src="./main.tsx"></script>
   </body>
 </html>
